--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 develop=.
-parts = interpreter test pydev
-extends = http://grok.zope.org/releaseinfo/grok-1.1a2.cfg
+parts = interpreter test
+extends = http://grok.zope.org/releaseinfo/grok-1.1rc1.cfg
 versions = versions
 
 [versions]
