being more precise with the viewlets name in zca

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 develop=.
-parts = interpreter test
-extends = http://grok.zope.org/releaseinfo/grok-1.1rc1.cfg
+parts = interpreter test omelette
+extends = http://grok.zope.org/releaseinfo/1.3.2/versions.cfg 
 versions = versions
 
 [versions]
@@ -16,7 +16,13 @@ interpreter = python
 recipe = pb.recipes.pydev
 eggs = megrok.navigation [test]
 
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${test:eggs}
+
 [test]
 recipe = zc.recipe.testrunner
 eggs = megrok.navigation [test]
 defaults = ['--tests-pattern', '^f?tests$', '-v', '-c']
+
+
